[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyramid-loss"
version = "0.1.0"
description = "Laplacian and Gaussian pyramid loss functions for PyTorch"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [
    { name = "fxwu", email = "fxwu.math@gmail.com" }
]
keywords = ["pytorch", "loss", "pyramid", "laplacian", "gaussian", "deep learning"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=1.10",
    "numpy",
]

[project.urls]
Homepage = "https://github.com/dhhssdh/pyramid-loss/tree/master"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyramid_loss*"]
